[package]
name = "sandbox"
version = "0.1.0"
authors = ["Mark Sumner"]
edition = "2018"

[dependencies]
cgmath = "0.16.1"
gl = "0.10.0"
image = "0.19.0"
# only needed from chapter 3 on
tobj = "0.1.6"
num = "0.2.0"
rand = "0.5.5"

[dependencies.glfw]
version = "0.23.0"
default-features = false

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["winuser","wincon","shellapi"] }
